<resources>
    <string name="settings">Settings</string>
    <string name="change_image">Change image</string>
    <string name="gallery">Gallery</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="download_booklet">Download Booklet</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirmDeleteAcc">Are you sure you want to Delete your account forever ?</string>
    <string name="enterDeleteAcc">Enter your password to delete your account forever</string>
    <string name="little_chemist">Little Chemist</string>
    <string name="app_name">Little Chemist</string>
    <string name="welcome">Welcome </string>
    <string name="instruction1">Welcome to Little Chemist!</string>
    <string name="instruction2">Here are some tips to get you started</string>
    <string name="instruction3">When a lesson is <font color='#FFFF00'>YELLOW</font>, it means it is unlocked but not completed </string>
    <string name="instruction4">When a lesson is <font color='#32CD32'>GREEN</font>, it means it is completed </string>
    <string name="instruction5">When a lesson is <font color='#696969'>GREY</font>, it means it is locked  </string>
    <string name="buttonDes1">You can click on <b>"Little Chemist"</b> to view chapters</string>
    <string name="buttonDes2">Or for viewing a score of quiz click on the <b>wheel</b></string>
    <string name="chapter_1">Chapter 1</string>
    <string name="chapter_2">Chapter 2</string>
    <string name="chapter_3">Chapter 3</string>
    <string name="chapter_4">chapter 4</string>
    <string name="chapter_5">chapter 5</string>
    <string name="ch1">Ch1</string>
    <string name="ch2">Ch2</string>
    <string name="ch3">Ch3</string>
    <string name="ch4">Ch4</string>
    <string name="ch5">Ch5</string>
    <string name="chapters">Chapters</string>
    <string name="discovery1">Atomic Theory</string>
    <string name="discovery2">Forces</string>
    <string name="Ch5Name">The Periodic Table</string>
    <string name="Ch2Name">Elements</string>
    <string name="Ch3Name">Chemistry Basics</string>
    <string name="Ch4Name">The Branches Of Chemistry</string>
    <string name="Ch1Name">The Study Of Atoms</string>
    <string name="lesson1">Lesson 1</string>
    <string name="lesson2">Lesson 2</string>
    <string name="lesson3">Lesson 3</string>
    <string name="lesson4">Lesson 4</string>
    <string name="lesson5">Lesson 5</string>
    <string name="Ch1Lsn1">History of the Atom</string>
    <string name="Ch1Lsn2">Electrons</string>
    <string name="Ch1Lsn3">Isotopes</string>
    <string name="Ch1Lsn4">Heisenberg Uncertainty Principle</string>
    <string name="Ch1Lsn5">Nuclear Fission</string>
    <string name="Ch2Lsn1">Heterogeneous Mixture</string>
    <string name="Ch2Lsn2">Polymers</string>
    <string name="Ch2Lsn3">Chemical Bonds</string>
    <string name="Ch2Lsn4">Chemical Equations</string>
    <string name="Ch2Lsn5">pH Scale</string>
    <string name="Ch3Lsn1">Salt Facts</string>
    <string name="Ch3Lsn2">Matter</string>
    <string name="Ch3Lsn3">Chemical Reactions</string>
    <string name="Ch3Lsn4">Liquids and Gases</string>
    <string name="Ch3Lsn5">Bio  chemistry</string>
    <string name="Ch4Lsn1">Water Chemistry</string>
    <string name="Ch4Lsn2">Organic Chemistry</string>
    <string name="Ch4Lsn3">Food Chemistry</string>
    <string name="Ch4Lsn4">Polymer Chemistry</string>
    <string name="Ch4Lsn5">Forensic Chemistry</string>
    <string name="Ch5Lsn1">What Is the Periodic Table</string>
    <string name="Ch5Lsn2">Group 1</string>
    <string name="Ch5Lsn3">Group 2</string>
    <string name="Ch5Lsn5">Group 18</string>
    <string name="Ch5Lsn4">Group 17</string>
    <string name="finishBtn">Finish</string>
    <string name="backBtn">Back</string>
    <string name="nextBtn">Next</string>
    <string name="getEx">Get Exercise</string>
    <string name="Quiz">Quiz</string>
    <string name="QuizScore">Quiz score</string>
    <string name="nextQ">Next Question</string>
    <string name="previous_question">Previous Question</string>
    <string name="Finishq">Finish all the questions!</string>
    <string name="QuizResult">Quiz Result</string>
    <string name="question">Question:</string>
    <string name="Youranswer">Your answer:</string>
    <string name="Rightanswer">Right answer:</string>
    <string name="chapter_Unlocked">Unlocked Chapter</string>
    <string name="chapter_Locked">Locked Chapter</string>
    <string name="scores">Scores</string>
    <string name="progressBar">Progress Bar</string>
    <string name="exercise">Exercise</string>
    <string name="exercise1">Exercise 1</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_passwordConf">Confirm Password</string>
    <string name="answer">Answer</string>
    <string name="new_password">New Password</string>
    <string name="don_t_have_an_acount">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="recover_password">Change Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_out">Log Out</string>
    <string name="confirmLogginOut">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="security_question">Security Question</string>
    <string name="null_username">Username should not be empty</string>
    <string name="null_password">Password should not be empty</string>
    <string name="IncorrectAccount">UserName or Passwords is not correct</string>
    <string name="IncorrectPassword">Password is not correct</string>
    <string name="shortPass">Password should be more than 5 characters</string>
    <string name="passNotMatch">Passwords do not match</string>
    <string name="shortName">Username should be more than 4 characters</string>
    <string name="nameExist">Username exist, please choose another username</string>
    <string name="nameNotExist">Username does not exist</string>
    <string name="nullSecQuestion">You did not select a question</string>
    <string name="nullSecAnswer">You did not write an answer</string>
    <string name="shortAnswer">The answer must be at least 3 characters</string>
    <string name="SecurityQwrong">The security question does not match the one you chose at sign up</string>
    <string name="SecurityAwrong">The security answer does not match the one you wrote at sign up</string>
    <string name="login_failed">Login failed</string>
    <string name="scan">Scan The Card After The White Dots Appear</string>
    <string name="cards">Cards</string>
    <string name="ok">Okay</string>
    <string name="prepare">Please Prepare The Following Cards</string>
    <string name="tryAgain">Try Again!</string>
    <string name="problem">If You Could Not Find The Atom Please Press Reset</string>
    <string name="Look">A wild Atom Has Appeared! Look For It!</string>
    <string name="reset">Reset</string>
    <string name="add_a_neutron">Add A Neutron</string>
    <string name="split_atom">Click The Button to Add a Neutron to The Atom and See What Happens!!</string>
    <string name="done">Done</string>
    <string name="prepare2">Please Prepare Any 3 Cards From The Booklet</string>
    <string name="throwFire">Choose the element you want to throw in the fire</string>
    <string name="gas">Gas</string>
    <string name="selectgas">Select The Gas Type</string>
    <string name="liquid">Liquid</string>
    <string name="selectliquid">Select The Liquid Type</string>
    <string name="cyclodextrin">Cyclodextrins are cyclic oligosaccharides used for the improvement of water-solubility of drugs</string>
    <string name="co2">This is the Molecule of CO2</string>
    <string name="hydrogen1">The Hydrogen Card</string>
    <string name="hydrogen2">Hydrogen is The First Element in The Periodic Table</string>
    <string name="lithium1">The Lithium Card.</string>
    <string name="lithium2">The Lithium\’s Atomic Number is Three and its Symbol is Li</string>
    <string name="sodium1">The Sodium Card</string>
    <string name="sodium2">The Sodium\'s Atomic Number is 11 and its Symbol is Na</string>
    <string name="barium1">The Barium Card</string>
    <string name="barium2">The Barium\’s Atomic Number is 56 and its symbol is Ba</string>
    <string name="calcium1">The Calcium Card</string>
    <string name="calcium2">The Calcium\’s atomic number is 20 and its symbol is Ca</string>
    <string name="magnesium1">The Magnesium Card</string>
    <string name="magnesium2">The Magnesium\’s Atomic Number is 12 and its Symbol is Mg</string>
    <string name="fluorine1">The Fluorine Card</string>
    <string name="fluorine2">The Fluorine\’s Atomic Number is 9 and its Symbol is F</string>
    <string name="chlorine1">The Chlorine Card</string>
    <string name="chlorine2">The Chlorine\’s atomic number is 17 and its symbol is Cl</string>
    <string name="bromine1">The Bromine Card</string>
    <string name="bromine2">The Bromine\’s Atomic Number is 35 and its Symbol is Br</string>
    <string name="argon1">The Argon Card</string>
    <string name="argon2">The Argon\’s Atomic Number is 18 and its Symbol is Ar</string>
    <string name="helium1">The Helium Card</string>
    <string name="helium2">The Helium\’s Atomic Number is 2 and its Symbol is He</string>
    <string name="neon1">The Neon Card</string>
    <string name="neon2">The Neon\’s Atomic Number is 10 and its Symbol is Ne</string>
    <string name="tap_call">Tap Once To Call an Atom After The White Dots Appear</string>
    <string name="tap_call2">Tap Once To Call an Molecule After The White Dots Appear</string>
    <string name="tap_call3">Tap Once To Call an Polymer After The White Dots Appear</string>
    <string name="tap_call4">Tap Once To Call The Shapes of Matter</string>
    <string name="tap_call6">Tap To Start A Fire! After the White Dots Appear</string>
    <string name="tap_call7">Tap To Call A Matter Shape! After the White Dots Appear</string>
    <string name="C1L3S4E2M">Calculate the mass of helium</string>
    <string name="booklet">Go to the Settings to download the booklet</string>
    <string name="Cancel">Cancel</string>
    <string name="MutibleQ1">Drag the building blocks to create an atom</string>
    <string name="MutibleQ2">Match each scientist with his discovery</string>
</resources>