<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoverPassword">


    <Spinner
        android:id="@+id/security_questions"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="19dp"
        android:entries="@array/SecurityQs"
        app:layout_constraintBottom_toTopOf="@+id/Answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button2"
        android:layout_width="175dp"
        android:layout_height="84dp"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:layout_marginEnd="163dp"
        android:layout_marginRight="163dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/circle_btn"
        android:text="@string/recover_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"

        android:layout_marginTop="140dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="78dp"
        app:errorEnabled="true"

        app:errorTextAppearance="@style/error_appearance"
        app:layout_constraintBottom_toTopOf="@+id/newpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="45dp"
        tools:layout_conversion_absoluteWidth="363dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="304dp"
            android:layout_height="50dp"


            android:autofillHints=""
            android:hint="@string/answer"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:visibility="visible"


            tools:targetApi="o"
            tools:visibility="visible" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"

        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginBottom="32dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:layout_constraintBottom_toTopOf="@+id/confirmpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="45dp"
        tools:layout_conversion_absoluteWidth="363dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="304dp"
            android:layout_height="50dp"


            android:hint="@string/prompt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:visibility="visible"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"

        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="104dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="304dp"
            android:layout_height="50dp"

            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"

            android:hint="@string/prompt_passwordConf"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"


            />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>