<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/recyclercard"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_centerHorizontal="true"
        android:outlineAmbientShadowColor="@color/Black"
        android:outlineSpotShadowColor="@color/Black">

<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_centerVertical="true"-->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/Qinresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="20dp"
        android:padding="10dp"
        android:fontFamily="@font/dk_sugary_pancake"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#8E8E8E"
        android:textSize="18dp"
        android:fontFamily="@font/dk_sugary_pancake"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        />

    <View
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="#C5C5C5"/>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/wrongan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Youranswer"
        android:textSize="20dp"
        android:fontFamily="@font/dk_sugary_pancake"
        android:textColor="#B5B5B5"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/wronganswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#8E8E8E"
        android:textSize="18dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:fontFamily="@font/dk_sugary_pancake"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"/>

    </LinearLayout>
    <ImageView
        android:id="@+id/optionimage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/tick_mark"
        android:layout_marginStart="280dp"
        android:layout_centerVertical="true"/>
</RelativeLayout>
    <View
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="#C5C5C5"/>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/rightan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rightanswer"
        android:textSize="20dp"
        android:fontFamily="@font/dk_sugary_pancake"
        android:textColor="#B5B5B5"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/rightanswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#8E8E8E"
        android:textSize="18dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:fontFamily="@font/dk_sugary_pancake"
        android:paddingLeft="10dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="280dp"
        android:src="@drawable/tick_mark"
        android:layout_centerVertical="true"
        />
</RelativeLayout>

</LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>